2006-08-09  Tom Tromey  <tromey@redhat.com>

	PR classpath/28666:
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkScreenGraphicsDevice.c
	(Java_gnu_java_awt_peer_gtk_GdkScreenGraphicsDevice_nativeGetDisplayModes):
	Create a 'short' array.

2006-08-09  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/javah/JniHelper.java (getName): Properly
	handle arrays.
	* tools/gnu/classpath/tools/javah/JniIncludePrinter.java
	(writeFields): Print "L" after int constant.  Don't mangle the field
	name.  Only print int/long fields.

2006-08-09  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/javah/Main.java (getParser): Name program
	"javah".

2006-08-09  Sven de Marothy  <sven@physto.se>

	* javax/swing/JTree.java
	(JTree): Default SelectionModel should be DefaultTreeSelectionModel.
	(setSelectionModel): Null parameter should create an EmptySelectionM.

2006-08-09  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/AbstractDocument.java
	(insertString): Perform modifications inside a write lock.
	(insertStringImpl): Don't lock here. This is already done
	in insertString().
	(replace): Perform modifications inside a write lock.
	(AbstractElement.AbstractElement): Call addAttributes() to
	add the attributes.
	(AbstractElement.getName): Fetch name from the ElementNameAttibute.
	(BranchElement.lastIndex): New field. Optimizes getElementIndex().
	(BranchElement.BranchElement): Set lastIndex to -1.
	(BranchElement.getElementIndex): Implemented more efficient
	search.

2006-08-09  Roman Kennke  <kennke@aicas.com>

	* javax/swing/text/DefaultStyledDocument.java
	(Edit): Moved this inner class into ElementBuffer where it
	is actually needed.
	(edits): Moved this field into ElementBuffer.
	(getEditForParagraphAndIndex): Removed obsolete method.
	(insertUpdate): Added some optimizations and fixes. Split
	out handling insertion after newlines.
	(insertAfterNewline): New helper method. Handles insertions
	after a newline.