@@ -1,3 +1,10 @@
+2006-08-09  Sven de Marothy  <sven@physto.se>
+
+	* java/awt/image/BufferedImage.java
+	(BufferedImage): Reimplement predefined-type constructor.
+	(observers/tileObservers): Field renamed to tileObservers.
+	(createDefaultIndexedColorModel): New method.
+
 2006-08-09  Tom Tromey  <tromey@redhat.com>
 
 	PR classpath/28666:
